--- a/Julfiker_Portfolio/Views/Home/Accomplishments.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Accomplishments.cshtml
@@ -311,7 +311,7 @@
                     <p class="ac-desc">
                         “Technical Reviewer (Cybersecurity & Networking) – Springer Nature
 Fully reviewed all 15 chapters of CompTIA Network+ (N10-009) Certification Companion manuscript, providing expert validation of technical content.<br />
-                        July 2025 – Present
+                        July 2025 – Dec. 2025
                     </p>
                 </div>
             </div>
