--- a/Julfiker_Portfolio/Views/Home/Index.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="row align-items-center glass p-4 p-md-5 rounded-4">
       <!-- Profile -->
       <div class="col-md-4 text-center mb-4 mb-md-0">
-        <img src="~/images/jewel-profile.jpg" alt="Md Julfiker Ali Jewel"
+        <img src="~/images/Julfiker.jpg" alt="Md Julfiker Ali Jewel"
              class="img-fluid rounded-circle shadow" style="max-width: 250px;" />
         <div class="social-icons mt-4 d-flex gap-3 justify-content-center">
           <a href="https://www.linkedin.com/in/md-julfiker-ali-jewel-7b1442a9/" target="_blank" title="LinkedIn" style="color:#0077b5"><i class="fab fa-linkedin fa-2x"></i></a>
