--- a/Julfiker_Portfolio/Views/Home/Index.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Index.cshtml
@@ -13,11 +13,11 @@
 
       <!-- Profile -->
       <div class="col-md-4 text-center mb-4 mb-md-0">
-        <div class="profile-pic">
-          <img src="~/images/Julfiker.jpg"
-               alt="Md Julfiker Ali Jewel"
-               class="img-fluid rounded-circle" />
-        </div>
+<div class="profile-pic">
+  <img src="~/images/Julfiker.png"
+       alt="Md Julfiker Ali Jewel"
+       class="img-fluid" />
+</div>
 
         <div class="social-icons mt-4 d-flex gap-3 justify-content-center">
           <a href="https://www.linkedin.com/in/md-julfiker-ali-jewel-7b1442a9/" target="_blank" title="LinkedIn" style="color:#0077b5"><i class="fab fa-linkedin fa-2x"></i></a>
